# agent-seal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE-v1.0.md  _check_pg.py  _check_psycopg2.py  _pg_check.py  _test_pg.py  alembic.ini  bench_pg_only.py  docker-compose.yml  docker-entrypoint.sh  final_verify.py  fix_quotes.py  fix_quotes2.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_models.py
agent_audit/: __init__.py  cli.py  cli_utils.py  config.py  dashboard.py  engine.py  evidence.py  integrations.py  migrate.py  notify.py  observe.py  regression.py  report.py  storage.py  trail.py
agent_audit/core/: __init__.py  crypto.py  storage.py
agent_audit/hooks/: __init__.py  email.py  hermes_worker.py  langchain.py  slack.py
agent_audit/integrations/: openclaw.py
agent_audit/models/: __init__.py  event.py  llm_call.py  policy_decision.py  session.py
agent_audit/policy/: __init__.py  engine.py
agent_audit/server/: __init__.py  app.py  dependencies.py  hermes_middleware.py  metrics.py  middlewares.py
agent_audit/tracing/: __init__.py  anthropic.py  auto.py  config.py  openai_instrumentor.py  opentelemetry.py
agent_seal/: __init__.py  cli.py  config.py  dashboard.py  engine.py  evidence.py  integrations.py  notify.py  observe.py  prompt_version.py  replay.py  report.py  storage.py  trail.py
agent_seal/core/: __init__.py  chain.py  encrypted.py  redact.py  rotation.py  storage.py
agent_seal/hooks/: __init__.py  email.py  hermes_worker.py  langchain.py  slack.py
agent_seal/models/: base.py  (+2 more)
alembic/: env.py
audit_logs/: audit.jsonl
deploy/: init.sql
docs/: CHANGELOG.md  api-v1.md  architecture-v1.md  benchmark-v1.0-pg.md  benchmark-v1.0-quick.md  benchmark-v1.0.md  migration-guide.md  promo-hackernews.md  promo-zhihu.md  security-audit-v1.md
examples/: benchmark.py  demo.py
screenshots/: capture.js  capture_screenshots.cjs  gen_banner.py
spa/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tests/: _check_isinstance.py  benchmark_phase44.py  test_anthropic_instrumentor_fix.py  test_bench_pg_validation.py  test_cli.py  test_cli_utils.py  test_compliance_routes.py  test_config.py  test_core.py  test_crypto.py  test_e2e_security.py  test_edge_cases.py  test_encrypted.py  test_engine_unified_import.py  test_grafana_dashboards.py  test_hermes_middleware.py  test_integrations_engine_imports.py  test_langchain_hook.py  test_langchain_integrations.py  test_metrics_smoke.py  test_middlewares.py  test_migrate.py  test_notify.py  test_observe.py  test_overbroad_exception_fix.py  test_policy.py  test_proxy_routes.py  test_redact.py  test_report.py  test_storage.py  test_tracing.py  test_tracing_comprehensive.py  test_tracing_type_annotations.py  test_trail.py  test_v11_coexistence.py  test_weak_password_and_helm.py
(+111 files in other folders)
