[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-audit"
version = "1.0.0"
description = "Tamper-evident audit trail for AI agents — EU AI Act ready"
authors = [{ name = "Mr.H" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "sse-starlette>=1.0",
    "starlette>=1.3.1",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "cryptography>=43.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9"]
all = ["psycopg2-binary>=2.9"]

[project.scripts]
agent-audit = "agent_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_audit*"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-data]
agent_audit = ["py.typed"]

# ── Ruff ───────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "B011"]
"alembic/versions/**" = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["agent_audit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── Mypy ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
follow_imports = "skip"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
    "alembic.versions.*",
]
ignore_errors = true
